--- a/index.html
+++ b/index.html
@@ -4,27 +4,40 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>BarberShop</title>
-
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+	<link rel="stylesheet" href="css/style.css">
+
+	<link rel="stylesheet" href="css/header/header.css">
+	<link rel="stylesheet" href="css/header/nav.css">
+	<link rel="stylesheet" href="css/header/container-merchandising.css">
+
+	<link rel="stylesheet" href="css/main/main.css">
+	<link rel="stylesheet" href="css/main/about.css">
+	<link rel="stylesheet" href="css/main/services.css">
+	<link rel="stylesheet" href="css/main/contact.css">
+	<link rel="stylesheet" href="css/main/footer.css">
 </head>
 <body>
 	<header>
 		<nav>
-			<img src="" alt="" class="logo">
-			<ul class="menu">
-				<li>Home</li>
-				<li>About</li>
-				<li>Services</li>
-				<li>Contacts</li>
-			</ul>
+			<div class="container">
+				<img src="images/logo.png" alt="" class="logo">
+				<ul class="menu">
+					<li>Home</li>
+					<li>About</li>
+					<li>Services</li>
+					<li>Contacts</li>
+				</ul>
+			</div>
 		</nav>
 		<div class="container-merchandising">
-			<div class="merchandising">
-				<div class="merchandising-text">
-					<h2>Taking care of you,</h2>
-					<h3>enhancing your beauty is our goal.</h3>
-				</div>
-				<div class="merchandising-buttom">
+			<div class="container">
+				<div class="merchandising">
+					<div class="merchandising-text">
+						<h2>Taking care of you,</h2>
+						<h3>enhancing your beauty is our goal.</h3>
+					</div>
 					<button class="button">Book now</button>
 				</div>
 			</div>
@@ -32,163 +45,174 @@
 	</header>
 	<main>
 		<section class="about">
-			<div class="titles-main">ABOUT</div>
-			<div class="container-about">
-				<img src="" alt="" class="image-about">
-				<div class="about-texts-group">
-					<h3 class="about-texts-title">Professional Barbershop</h3>
-					<p class="about-texts">Lorem Ipsum has been the industry's standard dummy text .</p>
-					<p class="about-texts">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-						when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-					<p class="about-texts">It has survived not only five centuries, but also the leap into electronic 
-						typesetting, remaining essentially unchanged. </p>
-					<div class="clients-since">
-						<span class="clients-since-text">+500 clients</span>
-						<span class="clients-since-text">Since 2020</span>
+			<div class="container">
+				<div class="titles-main">ABOUT</div>
+				<div class="container-about">
+					<img src="images/main/about/about.png" alt="" class="image-about">
+					<div class="about-texts-group">
+						<h3 class="about-texts-title">Professional Barbershop</h3>
+						<p class="about-texts">Lorem Ipsum has been the industry's standard dummy text .</p>
+						<p class="about-texts">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+							when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+						</p>
+						<p class="about-texts">It has survived not only five centuries, but also the leap into electronic 
+							typesetting, remaining essentially unchanged. 
+						</p>
+						<div class="clients-since">
+							<span class="clients-since-text">+500 clients</span>
+							<span class="clients-since-text">Since 2020</span>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div>
+			<div class="container-orange-bar">
 				<div class="orange-bar"></div>
 			</div>
 		</section>
 
 		<section class="services">
-			<div class="titles-main">SERVICES</div>
-			<div class="price-table">
-				<div class="table1">
-					<div class="haircuts">
-						<div class="haircut-price">
-							<div>Haircut</div>
-							<div>Price - 15$</div>
+			<div class="container">
+				<div class="titles-main">SERVICES</div>
+				<div class="price-table">
+					<div class="table1">
+						<div class="haircuts">
+							<div class="haircut-price">
+								<div>Haircut</div>
+								<div class="price">Price - 15$</div>
+							</div>
+							<p>Lorem ipsum is simply dummy text.</p>
 						</div>
-						<p>Lorem ipsum is simply dummy text.</p>
-					</div>
 
-					<div class="haircuts">
-						<div class="haircut-price">
-							<div>Cut & Shave</div>
-							<div>Price - 20$</div>
+						<div class="haircuts">
+							<div class="haircut-price">
+								<div>Cut & Shave</div>
+								<div class="price">Price - 18$</div>
+							</div>
+							<p>Lorem ipsum is simply dummy text.</p>
 						</div>
-						<p>Lorem ipsum is simply dummy text.</p>
-					</div>
 
-					<div class="haircuts">
-						<div class="haircut-price">
-							<div>Beard Trim</div>
-							<div>Price - 15$</div>
+						<div class="haircuts">
+							<div class="haircut-price">
+								<div>Beard Trim</div>
+								<div class="price">Price - 15$</div>
+							</div>
+							<p>Lorem ipsum is simply dummy text.</p>
 						</div>
-						<p>Lorem ipsum is simply dummy text.</p>
+					</div>
+					<div class="table2">
+						<div class="haircuts">
+							<div class="haircut-price">
+								<div>Face Shave</div>
+								<div class="price">Price - 12$</div>
+							</div>
+							<p>Lorem ipsum is simply dummy text.</p>
+						</div>
+
+						<div class="haircuts">
+							<div class="haircut-price">
+								<div>Head Shave</div>
+								<div class="price">Price - 12$</div>
+							</div>
+							<p>Lorem ipsum is simply dummy text.</p>
+						</div>
+
+						<div class="haircuts">
+							<div class="haircut-price">
+								<div>Line Up</div>
+								<div class="price">Price - 19$</div>
+							</div>
+							<p>Lorem ipsum is simply dummy text.</p>
+						</div>
 					</div>
 				</div>
-				<div class="table2">
-					<div class="haircuts">
-						<div class="haircut-price">
-							<div>Face Shave</div>
-							<div>Price - 12$</div>
-						</div>
-						<p>Lorem ipsum is simply dummy text.</p>
-					</div>
-
-					<div class="haircuts">
-						<div class="haircut-price">
-							<div>Head Shave</div>
-							<div>Price - 12$</div>
-						</div>
-						<p>Lorem ipsum is simply dummy text.</p>
-					</div>
-
-					<div class="haircuts">
-						<div class="haircut-price">
-							<div>Line Up</div>
-							<div>Price - 20$</div>
-						</div>
-						<p>Lorem ipsum is simply dummy text.</p>
-					</div>
+				<div class="container-image-clients">
+					<img src="images/main/services/client1.png" alt="" class="image-clients">
+					<img src="images/main/services/client2.png" alt="" class="image-clients">
+					<img src="images/main/services/client3.png" alt="" class="image-clients">
+					<img src="images/main/services/client4.png" alt="" class="image-clients">
+					<img src="images/main/services/client5.png" alt="" class="image-clients">
+					<img src="images/main/services/client6.png" alt="" class="image-clients">
 				</div>
 			</div>
-			<div class="container-image-clients">
-				<img src="" alt="" class="image-clients">
-				<img src="" alt="" class="image-clients">
-				<img src="" alt="" class="image-clients">
-				<img src="" alt="" class="image-clients">
-				<img src="" alt="" class="image-clients">
-				<img src="" alt="" class="image-clients">
-			</div>
 
-			<div>
+			<div class="container-orange-bar">
 				<div class="orange-bar"></div>
 			</div>
 		</section>
 
 		<section class="contacts">
-			<div class="titles-main">CONTACTS</div>
-			<div class="container-contacts">
-				<img src="" alt="" class="img-adress">
-				<div class="text-contacts">
-					<div class="media-group">
-						<div class="media">
-							<p>Whatsapp:</p>
-							<p>+1 (555) 123-4567</p>
+			<div class="container">
+				<div class="titles-main">CONTACTS</div>
+				<div class="container-contacts">
+					<img src="images/contact/localization.png" alt="" class="img-adress">
+					<div class="text-contacts">
+						<div class="media-group">
+							<div class="media">
+								<p class="media-title">Whatsapp:</p>
+								<p>+1 (555) 123-4567</p>
+							</div>
+							<div class="media">
+								<p class="media-title">Email:</p>
+								<p>example@hotmail.com</p>
+							</div>
+							<div class="media">
+								<p class="media-title">Tell:</p>
+								<p>+1 (310) 987-6543</p>
+							</div>
+							<div class="media">
+								<i class="fa-brands fa-facebook"></i>
+								<i class="fa-brands fa-instagram"></i>
+							</div>
 						</div>
-						<div class="media">
-							<p>Email:</p>
-							<p>example@hotmail.com</p>
+						<div class="adress">
+							<h6>Adress:</h6>
+							<p>123 Maple Street</p>
+							<p>Springfield, IL 62704</p>
+							<p>USA</p>
 						</div>
-						<div class="media">
-							<p>Tell:</p>
-							<p>+1 (310) 987-6543</p>
-						</div>
-						<div class="media">
-							<i class="fa-brands fa-facebook"></i>
-							<i class="fa-brands fa-instagram"></i>
-						</div>
-					</div>
-					<div class="adress">
-						<p>123 Maple Street</p>
-						<p>Springfield, IL 62704</p>
-						<p>USA</p>
 					</div>
 				</div>
 			</div>
 
-			<div>
+			<div class="container-orange-bar">
 				<div class="orange-bar"></div>
 			</div>
 		</section>
 	</main>
 	<footer>
-		<div class="text-contacts">
-			<div class="media-group">
-				<div class="media">
-					<p>Whatsapp:</p>
-					<p>+1 (555) 123-4567</p>
+		<div class="container">
+			<div class="text-contacts">
+				<div class="media-group">
+					<div class="media">
+						<p>Whatsapp:</p>
+						<p>+1 (555) 123-4567</p>
+					</div>
+					<div class="media">
+						<p>Email:</p>
+						<p>example@hotmail.com</p>
+					</div>
+					<div class="media">
+						<p>Tell:</p>
+						<p>+1 (310) 987-6543</p>
+					</div>
+					<div class="media">
+						<i class="fa-brands fa-facebook"></i>
+						<i class="fa-brands fa-instagram"></i>
+					</div>
 				</div>
-				<div class="media">
-					<p>Email:</p>
-					<p>example@hotmail.com</p>
-				</div>
-				<div class="media">
-					<p>Tell:</p>
-					<p>+1 (310) 987-6543</p>
-				</div>
-				<div class="media">
-					<i class="fa-brands fa-facebook"></i>
-					<i class="fa-brands fa-instagram"></i>
+				<div class="adress">
+					<h6>Adress:</h6>
+					<p>123 Maple Street</p>
+					<p>Springfield, IL 62704</p>
+					<p>USA</p>
 				</div>
 			</div>
-			<div class="adress">
-				<p>123 Maple Street</p>
-				<p>Springfield, IL 62704</p>
-				<p>USA</p>
+			<div class="copyright">
+				<p>Website Barber by Perrut. All rights reserved</p>
+				<img src="images/logo.png" alt="" class="logo">
 			</div>
 		</div>
-		<div class="Copyright">
-			<p>Website Barber by Perrut. All rights reserved</p>
-			<img src="" alt="" class="logo">
-		</div>
-
-		<div>
+		<div class="container-orange-bar">
 			<div class="orange-bar"></div>
 		</div>
 	</footer>
