--- a/index.html
+++ b/index.html
@@ -20,18 +20,23 @@
 
 	<script src="https://unpkg.com/scrollreveal"></script>
 	<script src="js/scrollReveal.js" defer></script>
+	<script src="js/menu-mobile.js" defer></script>
 </head>
 <body>
 	<header>
 		<nav class="hidden top">
 			<div class="container">
 				<img src="images/logo.png" alt="" class="logo hidden top">
-				<ul class="menu">
+				<ul class=" hidden menu">
 					<li class="hidden top">Home</li>
 					<li class="hidden top">About</li>
 					<li class="hidden top">Services</li>
 					<li class="hidden top">Contacts</li>
 				</ul>
+				<div class="menu-mobile">
+					<i class="fa-solid fa-bars"></i>
+					<i class="fa-solid fa-xmark"></i>
+				</div>
 			</div>
 		</nav>
 		<div class="container-merchandising">
