--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 </head>
 <body>
 	<header>
-		<nav class="hidden top">
+		<nav class="nav-menu">
 			<div class="container">
-				<img src="images/logo.png" alt="" class="logo hidden top">
-				<ul class=" hidden menu">
-					<li class="hidden top">Home</li>
-					<li class="hidden top">About</li>
-					<li class="hidden top">Services</li>
-					<li class="hidden top">Contacts</li>
+				<img src="images/logo.png" alt="" class="logo">
+				<ul class="menu">
+					<li><a href="#">Home</a></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="#services">Services</a></li>
+					<li><a href="#contacts">Contacts</a></li>
 				</ul>
 				<div class="menu-mobile">
 					<i class="fa-solid fa-bars"></i>
@@ -52,7 +52,7 @@
 		</div>
 	</header>
 	<main>
-		<section class="about">
+		<section class="about" id="about">
 			<div class="container">
 				<div class="titles-main hidden bottom">ABOUT</div>
 				<div class="container-about">
@@ -78,7 +78,7 @@
 			</div>
 		</section>
 
-		<section class="services">
+		<section class="services" id="services">
 			<div class="container">
 				<div class="titles-main hidden bottom">SERVICES</div>
 				<div class="price-table">
@@ -148,7 +148,7 @@
 			</div>
 		</section>
 
-		<section class="contacts">
+		<section class="contacts" id="contacts">
 			<div class="container">
 				<div class="titles-main hidden bottom">CONTACTS</div>
 				<div class="container-contacts">
